2003-01-27  Mo DeJong  <mdejong@users.sourceforge.net>

	* tests/tclblend/loading.test: Add unimplemented
	constraint so that loading-2.3 is not run.

2003-01-27  Mo DeJong  <mdejong@users.sourceforge.net>

	* README.jacl: Document shared UNIX/Windows
	build for Jacl.
	* README.tclblend: Document shared UNIX/Windows
	build for Tcl Blend.
	* new_features.txt: Added note about new
	Windows build system.
	* unix/README.jacl: Removed.
	* unix/README.tclblend: Removed.
	* win/README.jacl: Removed.
	* win/README.tclblend: Removed.

2003-01-27  Mo DeJong  <mdejong@users.sourceforge.net>

	* bsjavac.sh: Add script that works around path
	separator issues under Win32.
	* configure: Regen.
	* tcljava.m4 (AC_PROG_JAVAC, AC_JAVA_JNI_LIBS,
	TCLJAVA_CHECK_TCLSH): Add support for JDK 1.1
	when building under mingw. This meant adding a
	special workaround to deal with path separator
	bugs in that version of javac. Also set the
	TCL_LIBRARY env var when running tclsh.
	* src/tclblend/tcl/lang/CObject.java: Don't
	make objPtr final to work around bug in
	brain dead jdk 1.1 compiler.

2003-01-27  Mo DeJong  <mdejong@users.sourceforge.net>

	* Makefile.in: Use TOP_DIR_NATIVE instead of
	TOP_DIR in build rules that require a Win32
	style path instead of a unix style path.

2003-01-21  Mo DeJong  <mdejong@users.sourceforge.net>

	Add initial and incomplete mingw build support.

	* Makefile.in: Add _NATIVE versions of paths
	that have to be in Win32 native format. Add
	TCL_DEFS to compile line to avoid compiler
	warnings under Mingw. Add PATH to the list
	of variables that gets modified when running
	the shell or test targets. Add jni_example.clean
	to cleanup after recent change.
	* configure: Regen.
	* configure.in: Subst TCL_DEFS and TCL_BIN_TCLSH
	into Makefile. Subst *_NATIVE variables after
	running them through mingw_path.sh.
	* mingw_path.sh: Add new helper file that
	converts a mingw path to a win32 path.
	* tcljava.m4 (AC_JAVA_JNI_LIBS, TCLJAVA_WITH_TCL,
	TCLJAVA_CHECK_TCLSH):